@@ -8,6 +8,7 @@ version ? (????-??-??):
   - choosecustomer: removed not needed WHERE conditions in customer 
     select window, rewrited query for MySQL 5.0, now is 20-100 times faster (alec)
   - we can move customers from one tariff to another filtering it by network (chilek)
+  - optimized Customers List generation time when using filters (alec)
 
 version 1.9.6 Belos (2007-02-16):
 
